@@ -35,6 +35,7 @@ This release includes the following bugfixes:
    CURLOPT_NOBODY set true
  o memory leak on some libz errors for content encodings
  o NSS-enabled build is repaired
+ o superfluous wait in SFTP downloads removed
 
 This release includes the following known bugs:
 
@@ -46,6 +47,6 @@ advice from friends like these:
  Lisa Xu, Daniel Fandrich, Craig A West, Alexey Borzov, Sharad Gupta,
  Peter Sylvester, Chad Monroe, Markus Moeller, Yang Tse, Scott Cantor,
  Patrick Scott, Hidemoto Nakada, Jocelyn Jaubert, Andre Guibert de Bruet,
- Kamil Dudka
+ Kamil Dudka, Patrik Thunstrom
 
         Thanks! (and sorry if I forgot to mention someone)
